# ocaml-thrift-lib

./: .gitignore  .travis.yml  Makefile  README.md  TODO  _tags  dune-project  myocamlbuild.ml  setup.ml  thrift.obuild  thrift.opam
.github/workflows/: ci.yaml
doc/: index.html
doc/thrift/: index.html
doc/thrift/TBinaryProtocol/: index.html
doc/thrift/TBinaryProtocol/class-factory/: index.html
doc/thrift/TBinaryProtocol/class-t/: index.html
doc/thrift/TChannelTransport/: index.html
doc/thrift/TChannelTransport/class-t/: index.html
doc/thrift/TFramedTransport/: index.html
doc/thrift/TFramedTransport/class-t/: index.html
doc/thrift/TServer/: index.html
doc/thrift/TServer/class-t/: index.html
doc/thrift/TServerSocket/: index.html
doc/thrift/TServerSocket/class-t/: index.html
doc/thrift/TSimpleServer/: index.html
doc/thrift/TSimpleServer/class-t/: index.html
doc/thrift/TSocket/: index.html
doc/thrift/TSocket/class-t/: index.html
doc/thrift/TThreadedServer/: index.html
doc/thrift/TThreadedServer/class-t/: index.html
doc/thrift/Thrift/: index.html
doc/thrift/Thrift/Application_Exn/: index.html
doc/thrift/Thrift/Application_Exn/class-t/: index.html
doc/thrift/Thrift/Processor/: index.html
doc/thrift/Thrift/Processor/class-factory/: index.html
doc/thrift/Thrift/Processor/class-t/: index.html
doc/thrift/Thrift/Protocol/: index.html
doc/thrift/Thrift/Protocol/class-factory/: index.html
doc/thrift/Thrift/Protocol/class-t/: index.html
doc/thrift/Thrift/Transport/: index.html
doc/thrift/Thrift/Transport/class-factory/: index.html
doc/thrift/Thrift/Transport/class-server_t/: index.html
doc/thrift/Thrift/class-t_exn/: index.html
src/: META  TBinaryProtocol.ml  TCompactProtocol.ml  TFramedTransport.ml  Thrift.ml  dune  libthrift-ocaml.mllib
test/: dune  roundtrip_test.ml  test.thrift  test_transport.ml  unit_tests.ml
test/gen-ocaml/: test_consts.ml  test_types.ml  test_types.mli
(+1 files in other folders)
