opam-version: "2.0"
maintainer: "vb@luminar.eu.org"
authors: ["vb@luminar.eu.org"]
build: make
homepage: "https://github.com/vbmithr/ocaml-thrift-lib"
bug-reports: "https://github.com/vbmithr/ocaml-thrift-lib/issues"
remove: [["ocamlfind" "remove" "thrift"]]
depends: [
  "ocaml" {< "4.06.0"}
  "ocamlfind"
  "ocamlbuild" {build}
]
dev-repo: "git://github.com/vbmithr/ocaml-thrift-lib"
install: [make "install"]
synopsis: "OCaml bindings for the Apache Thrift RPC system"
flags: light-uninstall
url {
  src: "https://github.com/vbmithr/ocaml-thrift-lib/archive/0.9.0.tar.gz"
  checksum: "md5=e80da38e12a65de81370d71778267d78"
}
