opam-version: "2.0"
maintainer: "vb@luminar.eu.org"
authors: ["vb@luminar.eu.org"]
build: make
homepage: "https://github.com/vbmithr/ocaml-thrift-lib"
bug-reports: "https://github.com/vbmithr/ocaml-thrift-lib/issues"
remove: [["ocamlfind" "remove" "thrift"]]
depends: [
  "ocaml" { >= "4.03.0"}
  "dune" { >= "1.1" }
]
dev-repo: "git://github.com/vbmithr/ocaml-thrift-lib"
install: [make "install"]
synopsis: "OCaml bindings for the Apache Thrift RPC system"
